# sandbox-manager

./: .env  .env.development  .env.template  .gitignore  Cargo.toml  ENROLLMENT_FIX.todo.md  README.md  deploy.sh  ecosystem.config.js  go.mod  go.sum  run.sh
.github/workflows/: deploy.yml  release.yml
.noise/: client.env  server.env
archive/cli-julia/: Manifest.toml  Project.toml  README.md  sandbox.jl  test.jl
archive/cli-julia-static/: Manifest.toml  Project.toml  build.jl  jl_stubs.c
archive/cli-zig/: build.zig
assets/: tool_catalog.json
assets/cache/: v1.4.3-todoforai-bridge-linux-x64
cli/: Makefile  install.sh  main.c
cli-c/: main.c  noise.c  noise.h
cli/src/: main.zig
cmd/sandbox-manager/: main.go  rlimit_linux.go  rlimit_other.go
configs/: vm-sizes.json
docs/: COMPARISON.md  NATIVE_SSH_BASTION.md  NEXT_STEPS.md  PLAN_AUTH_INVENTORY.md  vm-update.todo.md
guest-agent/: agent.sh
internal/api/: api.go
internal/backend/: backend.go
internal/config/: config.go
internal/sandbox/: sandbox.go
internal/service/: pricing.go  service.go  service_test.go
internal/store/: store.go  store_test.go
internal/userhome/: userhome.go  userhome_test.go
internal/vm/: homedisk.go  manager.go  network.go  util.go
nginx/: noise-stream.conf  vm.todofor.ai.conf
oci/: Dockerfile  entrypoint.sh  tfa-screencast
scripts/: build-alpine-rootfs.sh  build-cli-lite.sh  build-kernel.sh  build-oci.sh  build-rootfs-with-bridge.sh  build-rootfs-with-edge.sh  build-templates.sh  build-ubuntu-rootfs.sh  create-template.sh  deploy-lib.sh  ensure-bridge-lite.sh  ensure-bridge.sh  lite-mount-home.sh  lite-netns.sh  noise-keygen.sh  preflight-redis-probe.sh  sandbox-pool-up.sh  sandboxctl-ssh  setup-host.sh  setup.sh  setup_host_network.sh  smoke-test-boot.sh  smoke-test-kernel-boot.sh  smoke-test-reconcile.sh  smoke-test-user-home.sh  spike-kata-fc.sh  sync-vendor.sh  test-integration.sh  update-tools.sh
scripts/rootfs/: init
src/: backend.rs  main.rs  recovery.rs  redis.rs
src/api/: admin.rs  auth_extractor.rs  mod.rs  sandbox.rs  templates.rs
src/auth/: mod.rs
src/noise/: protocol.rs  server.rs
src/service/: errors.rs  mod.rs  types.rs  user_home.rs
src/template/: builder.rs  mod.rs
src/vm/: config.rs  firecracker.rs  lite.rs  manager.rs  mod.rs  network.rs  sandbox.rs  session.rs  size.rs  virtiofs.rs
systemd/: 99-sandbox-manager-ignore.rules  install.sh  sandbox-bridge-lite.service  sandbox-bridge-recheck.service  sandbox-bridge.service  sandbox-bridge.timer  sandbox-manager@.service  tfa-sandbox-manager@.service
templates/: ubuntu-base.packages
tests/: reconcile_state_race.rs  recovery_smoke.rs
tests/vm/: mod.rs
web/: admin.html  dev-server.js  index.html
web/admin/: index.html
(+9 files in other folders)
