[package]
name = "sandbox-manager"
version = "0.1.0"
edition = "2021"
description = "VM sandbox manager using Zeroboot CoW fork engine"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# KVM/VM management
kvm-ioctls = "0.16"
kvm-bindings = "0.7"
vmm-sys-util = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking
nix = { version = "0.28", features = ["net", "ioctl"] }
libc = "0.2"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio", "script"] }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
bytes = "1"
futures = "0.3"
snow = "0.9"

[dev-dependencies]
tokio-test = "0.4"
