[package]
name = "sandbox-manager"
version = "0.1.0"
edition = "2021"
description = "VM sandbox manager using Firecracker microVMs"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

# KVM/VM management
kvm-ioctls = "0.16"
kvm-bindings = "0.7"
vmm-sys-util = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking
nix = { version = "0.28", features = ["net", "ioctl"] }
libc = "0.2"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio", "script"] }

# Utilities
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
bytes = "1"
futures = "0.3"
snow = "0.9"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SSH user-cert signing for the recovery channel. `ed25519` keeps cert
# size small + signing fast; no extra C deps.
ssh-key = { version = "0.6", features = ["ed25519", "rand_core", "std"] }
rand = "0.8"

[[bin]]
name = "sandbox-manager"
path = "src/main.rs"

# ProxyCommand helper used by `ssh -o ProxyCommand="fc-vsock-proxy <uds> <port>"`.
# Bridges stdin/stdout to a Firecracker vsock UDS after sending the CONNECT
# handshake. Tiny, no async runtime needed.
[[bin]]
name = "fc-vsock-proxy"
path = "src/bin/fc_vsock_proxy.rs"

[dev-dependencies]
tokio-test = "0.4"
